Fix: ensure h2 font-size on smallest screens is not overridden by general rule

--- a/style.css
+++ b/style.css
@@ -615,7 +615,7 @@ section:first-of-type {
   .hero h1 {
     font-size: 1.7rem;
   }
-  h2 {
+  section h2 {
     font-size: 1.1rem;
   }
   .btn, .btn-accent, .btn-secondary, .btn-outline {
